@@ -394,8 +394,8 @@ public class WebForm extends WebRequestSource {
      * Contructs a web form given the URL of its source page and the DOM extracted
      * from that page.
      **/
-    WebForm( URL baseURL, String parentTarget, Node node, String characterSet ) {
-        super( node, baseURL, NodeUtils.getNodeAttribute( node, "action" ), parentTarget );
+    WebForm( URL baseURL, String frameName, Node node, String characterSet ) {
+        super( node, baseURL, NodeUtils.getNodeAttribute( node, "action" ), frameName );
         _characterSet = characterSet;
     }
 
