@@ -11,6 +11,10 @@ Limitations:
 
 
 Revision History:
+11-Feb-2002
+Problems corrected:
+    1. Subframes with the same names as others in the same tree no longer cause an infinite loop / stack overflow
+
  5-Feb-2002
 Additions:
     1. Form parameters can be reset to their initial values using WebForm.reset().
